MySql을 통한 세션구현

--- a/views/create.jade
+++ b/views/create.jade
@@ -6,7 +6,7 @@ html
     h1 회원 가입
 
     div
-      form(action="/", method="GET")
+      form(action="/create", method="POST")
         p
           label(for='name') 아이디 :
           input.form-control(name="id", type="text", placeholder="abc@gmail.com")
