--- a/views/user.jade
+++ b/views/user.jade
@@ -6,10 +6,10 @@ html
     h1 유저 페이지
 
     div
-      form(action="/check", method="POST")
+      form(action="/check", method="GET")
         p
           button.btn.btn-lg.btn-primary.btn-block(type="submit") 회원 정보 수정
     div
-      form(action="/check", method="POST")
+      form(action="/drop", method="GET")
         p
           button.btn.btn-lg.btn-primary.btn-block(type="submit") 회원 탈퇴
